# LitModels

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci-checks.yml  ci-cloud.yml  ci-testing.yml  docs-build.yml  label-conflicts.yml  release-pypi.yml
_requirements/: _ci.txt  _docs.txt  typing.txt
docs/html/: .buildinfo
src/litmodels/: __about__.py  __init__.py
src/litmodels/integrations/: checkpoints.py  duplicate.py  mixins.py
src/litmodels/io/: __init__.py  cloud.py  gateway.py  utils.py
tests/: test_io_cloud.py
tests/integrations/: __init__.py  test_checkpoints.py  test_real_cloud.py
