[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "litmodels"
description = "Lightning AI Model hub."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lightning-AI et al.", email = "community@lightning.ai" },
]
requires-python = ">=3.8"
keywords = ["deep learning", "pytorch", "AI"]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Bug Tracker" = "https://github.com/Lightning-AI/litModels/issues"
Documentation = "https://lightning-ai.github.io/litModels/"
"Source Code" = "https://github.com/Lightning-AI/litModels"
Homepage = "https://github.com/Lightning-AI/litModels"
Download = "https://github.com/Lightning-AI/litModels"

[project.optional-dependencies]
build = [
    "build ==1.4.*",
    "twine ==6.2.*",
]
docs = [
    "sphinx >=6.0,<8.0",
    "myst-parser >=2.0.0",
    "nbsphinx >=0.8.5",
    "pandoc >=1.0",
    "pypandoc-binary",
    "docutils >=0.16",
    "sphinxcontrib-fulltoc >=1.0",
    "sphinxcontrib-mockautodoc",
    "sphinx-autodoc-typehints >=1.0",
    "sphinx-paramlinks >=0.5.1",
    "sphinx-togglebutton >=0.2",
    "sphinx-copybutton >=0.3",
    "pt-lightning-sphinx-theme @ https://github.com/Lightning-AI/lightning_sphinx_theme/archive/master.zip",
]
extra = [
    "lightning >= 2.0.0",
    "numpy <2.0.0 ; platform_system == 'Darwin'",
    "joblib >= 1.0.0",
]
test = [
    "coverage >=5.0",
    "pytest >=6.0",
    "pytest-cov",
    "pytest-mock",
    "pytorch-lightning >=2.0",
    "scikit-learn >=1.0",
    "huggingface-hub >=0.29.0",
    "tensorflow >=2.0",
]
typing = [
    "mypy ==1.19.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "litmodels.__about__.__version__" }
dependencies = { file = ["requirements.txt"] }


[tool.check-manifest]
ignore = [
    "*.yml",
    ".github",
    ".github/*"
]


[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".github",
    "dist",
    "build",
    "docs",
]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--color=yes",
    "--disable-pytest-warnings",
]
markers = [
    "cloud:Run the cloud tests for example",
]
filterwarnings = [
    "error::FutureWarning",
    "ignore:`isinstance\\(treespec, LeafSpec\\)` is deprecated.*:FutureWarning",
]
xfail_strict = true
junit_duration_report = "call"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
]

[tool.codespell]
#skip = '*.py'
quiet-level = 3
# comma separated list of words; waiting for:
#  https://github.com/codespell-project/codespell/issues/2839#issuecomment-1731601603
# also adding links until they ignored by its: nature
#  https://github.com/codespell-project/codespell/issues/2243#issuecomment-1732019960
#ignore-words-list = ""


[tool.docformatter]
recursive = true
wrap-summaries = 120
wrap-descriptions = 120
blank = true


[tool.mypy]
files = [
    "src",
]
install_types = true
non_interactive = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_redefinition = true
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = false


[tool.ruff]
line-length = 120
target-version = 'py39'
exclude = [
    "build",
    "dist",
    "docs"
]

[tool.ruff.format]
preview = true


[tool.ruff.lint]
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
    "D",  # see: https://pypi.org/project/pydocstyle
    "N",  # see: https://pypi.org/project/pep8-naming
    "RUF018",  # see: https://docs.astral.sh/ruff/rules/assignment-in-assert
    "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "I", # implementation for isort
]
extend-select = [
    "C4",  # see: https://pypi.org/project/flake8-comprehensions
    "PT",  # see: https://pypi.org/project/flake8-pytest-style
    "RET",  # see: https://pypi.org/project/flake8-return
    "SIM",  # see: https://pypi.org/project/flake8-simplify
]
ignore = [
    "E731",  # Do not assign a lambda expression, use a def
    "D100", # Missing docstring in public module
]

[tool.ruff.lint.per-file-ignores]
"__about__.py" = ["D100"]
"__init__.py" = ["D100", "E402"]
"examples/**" = ["D"] # todo
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

#[tool.ruff.pycodestyle]
#ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
